--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Project from Odin curiculum aiming in practicing use of javascript modules",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
-    "dev": "webpack --serve",
+    "build": "webpack --config webpack.prod.js",
+    "dev": "webpack serve --open --config webpack.dev.js",
     "deploy": "git subtree push --prefix dist origin gh-pages"
   },
   "repository": {
